Fix bug so links can be clicked on mobile

--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -3,6 +3,7 @@
 	display: inline;
 	width: 100%;
 	top: 0%;
+	z-index: 99;
 }
 
 h3 {
@@ -32,6 +33,7 @@ h5 {
 	right: 0%;
 	top: 0%;
 	position: absolute;
+	z-index: 99;
 }
 
 .helpButtons {
